--- a/TODO
+++ b/TODO
@@ -5,7 +5,8 @@
 - Friendship controller w/ the ability to follow/unfollow
 - Enforce a subscription count limit per user
 Article feed needs to have marked as read after "mark all as read"
-- Update reader_controller#mark_all_as_read to support single blogs
+Update reader_controller#mark_all_as_read to support single blogs
+- Migrate away from AppUser
 
 
 * Beandip / Frontend *
