--- a/TODO
+++ b/TODO
@@ -3,10 +3,11 @@
 - Wrap up account creation with email/password system
 - Figure out a method of keeping the facebook friendships in sync w/ queueing
 - Friendship controller w/ the ability to follow/unfollow
-- Enforce a subscription count limit per user
+Enforce a subscription count limit per user
 Article feed needs to have marked as read after "mark all as read"
 Update reader_controller#mark_all_as_read to support single blogs
 - Migrate away from AppUser
+- Create standard API results
 
 
 * Beandip / Frontend *
