--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@
 Enforce a subscription count limit per user
 Article feed needs to have marked as read after "mark all as read"
 Update reader_controller#mark_all_as_read to support single blogs
-- Migrate away from AppUser
+Migrate away from AppUser
 - Create standard API results
 
 
